runtime/samples/SalesforceFoundation/Cumulus/src/objects/npe01__Contacts_And_Orgs_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Automatic_Campaign_Member_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically creates a Campaign Member when you create an Opportunity that has a Primary Contact and a Primary Campaign source associated with it, or update that Opportunity with a Closed/Won stage.</description>
        <inlineHelpText>Automatically creates a Campaign Member when you create an Opportunity that has a Primary Contact and a Primary Campaign source associated with it, or update that Opportunity with a Closed/Won stage.</inlineHelpText>
        <label>Automatic Campaign Member Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Non_Responded_Status__c</fullName>
        <description>The automatic Status of a Campaign Member for Open or Closed/Lost opportunities that have a Primary Contact and a Primary Campaign Source associated with them. If left blank, Salesforce uses the first non-Responded status.</description>
        <inlineHelpText>The automatic Status of a Campaign Member for Open or Closed/Lost opportunities that have a Primary Contact and a Primary Campaign Source associated with them. If left blank, Salesforce uses the first non-Responded status.</inlineHelpText>
        <label>Campaign Member Non Responded Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Responded_Status__c</fullName>
        <description>The automatic Status of the Campaign Member for Closed/Won opportunities that have a Primary Contact and a Primary Campaign Source associated with them. If left blank, Salesforce uses the first Responded status.</description>
        <inlineHelpText>The automatic Status of the Campaign Member for Closed/Won opportunities that have a Primary Contact and a Primary Campaign Source associated with them. If left blank, Salesforce uses the first Responded status.</inlineHelpText>
        <label>Campaign Member Responded Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Honoree_Opportunity_Contact_Role__c</fullName>
        <description>Populating this setting will automatically create a Contact Role for Opportunities with an honoree Contact. Leaving this field blank will disable automatic Contact Role creation for the honoree.</description>
        <inlineHelpText>Populating this setting will automatically create a Contact Role for Opportunities with an honoree Contact. Leaving this field blank will disable automatic Contact Role creation for the honoree.</inlineHelpText>
        <label>Honoree Opportunity Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Account_Addresses_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables Address management for Household Accounts when selected.</description>
        <inlineHelpText>Disables Address management for Household Accounts when selected.</inlineHelpText>
        <label>Household Account Addresses Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Payments__c</fullName>
        <defaultValue>12</defaultValue>
        <description>Determines the maximum number of payments available in the Payment Creation Wizard.</description>
        <inlineHelpText>Determines the maximum number of payments available in the Payment Creation Wizard.</inlineHelpText>
        <label>Max Payments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification_Recipient_Opp_Contact_Role__c</fullName>
        <description>Populating this setting will automatically create a Contact Role for Opportunities with a notification recipient Contact. Leaving this field blank will disable automatic Contact Role creation for the notification recipient.</description>
        <inlineHelpText>Populating this setting will automatically create a Contact Role for Opportunities with a notification recipient Contact. Leaving this field blank will disable automatic Contact Role creation for the notification recipient.</inlineHelpText>
        <label>Notification Recipient Opp Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_RecTypes_Excluded_for_Payments__c</fullName>
        <description>Salesforce won&apos;t automatically create Payments for the selected Opportunity record types. Control or Command click to select more than one record type.</description>
        <inlineHelpText>Salesforce won&apos;t automatically create Payments for the selected Opportunity record types. Control or Command click to select more than one record type.</inlineHelpText>
        <label>Excluded Opp Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Types_Excluded_for_Payments__c</fullName>
        <description>Salesforce won&apos;t automatically create Payments for Opportunities that have this value in the Type picklist.</description>
        <inlineHelpText>Salesforce won&apos;t automatically create Payments for Opportunities that have this value in the Type picklist.</inlineHelpText>
        <label>Excluded Opp Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_Account_Addresses_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Address management for Organizational Accounts when selected.</description>
        <inlineHelpText>Enables Address management for Organizational Accounts when selected.</inlineHelpText>
        <label>Organizational Account Addresses Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payments_Auto_Close_Stage_Name__c</fullName>
        <description>Salesforce automatically sets an Opportunity&apos;s Stage to this value when the Payment Amount Received is equal to the Opportunity Amount. If no stage is selected, the Opportunity Stage won&apos;t change when payments are complete.</description>
        <inlineHelpText>Salesforce automatically sets an Opportunity&apos;s Stage to this value when the Payment Amount Received is equal to the Opportunity Amount. If no stage is selected, the Opportunity Stage won&apos;t change when payments are complete.</inlineHelpText>
        <label>Opportunity Stage for When Fully Paid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Simple_Address_Change_Treated_as_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, changes to a single Contact or Account address field update the existing Address, rather than creating a new Address.</description>
        <inlineHelpText>If checked, changes to a single Contact or Account address field update the existing Address, rather than creating a new Address.</inlineHelpText>
        <label>Simple Address Change Treated as Update</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>